Make sure column doesn't expand with nowrap text

--- a/src/app/shared/nav/nav-menu.component.css
+++ b/src/app/shared/nav/nav-menu.component.css
@@ -2,6 +2,7 @@
   flex-basis: 25%;
   padding-right: 5px;
   margin-left: 5px;
+  min-width: 0;
 }
 @media only screen
 and (max-device-width: 767px) {
